FINISH TOP HEADER

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <!-- Header will be reusable later -->
         <header id="header">
             <div id="header__top" class="">
-                <h1 id="header__icon">
-                    <a href="/index.html">
-                        <span>🅂🄿🄾🅁🅃 🄷🅄🄱</span>
+                <h1>
+                    <a class="header__logo" href="/index.html">
+                        <span class="header__icon">🅂🄿🄾🅁🅃 🄷🅄🄱</span>
                     </a>
                 </h1>
                 <ul>
