--- a/index.html
+++ b/index.html
@@ -17,40 +17,42 @@
     <body>
         <!-- Header will be reusable later -->
         <header id="header">
-            <div id="header__top" class="">
+            <div id="header__top" class="header__flex">
                 <h1>
                     <a class="header__logo" href="/index.html">
                         <span class="header__icon">🅂🄿🄾🅁🅃 🄷🅄🄱</span>
                     </a>
                 </h1>
-                <ul>
+                <ul class="header__menu">
                     <li><a href="#"><i class="fas fa-comment"></i><span>Contact Us</span></a></li>
                     <li><a href="#"><i class="fas fa-user-alt"></i><span>Login</span></a></li>
                     <li><a href="#"><i class="fas fa-shopping-cart"></i><span>Cart</span></a></li>
                 </ul>
             </div>
-            <div id="header__bottom" class="">
-                <ul>
+            <div id="header__bottom" class="header__flex">
+                <ul class="header__menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Soccer</a></li>
                     <li><a href="#">Volleyball</a></li>
                     <li><a href="#">Baseball</a></li>
                     <li><a href="#">Basketball</a></li>
                 </ul>
-                <div>
-                    <form>
-                        <input type="search" name="header__search__query" id="header__search__query"
-                            placeholder="Search products..." autocomplete="off">
-                        <button type="submit" name="header__search__submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
-                </div>
+
+                <form id="header__div__search">
+                    <input type="search" name="header__search__query" id="header__search__query"
+                        placeholder="Search products..." autocomplete="off" spellcheck="false">
+                    <button type="submit" name="header__search__submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+
             </div>
         </header>
 
         <!-- Main -->
-        <main></main>
+        <main>
+
+        </main>
 
         <!-- Footer will be reusable later -->
         <footer></footer>
