--- a/index.html
+++ b/index.html
@@ -5,49 +5,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/main.css">
-        <script src="js/index.js"></script>
 
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/0376e78535.js" crossorigin="anonymous"></script>
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="/css/style.css">
+
+        <!-- JS -->
+        <script src="js/index.js"></script>
 
         <title>Sport</title>
     </head>
 
     <body>
-        <!-- Header will be reusable later -->
-        <header id="header">
-            <div id="header__top" class="header__flex">
-                <h1>
-                    <a class="header__logo" href="/index.html">
-                        <span class="header__icon">🅂🄿🄾🅁🅃 🄷🅄🄱</span>
-                    </a>
-                </h1>
-                <ul class="header__menu">
-                    <li><a href="#"><i class="fas fa-comment"></i><span>Contact Us</span></a></li>
-                    <li><a href="#"><i class="fas fa-user-alt"></i><span>Login</span></a></li>
-                    <li><a href="#"><i class="fas fa-shopping-cart"></i><span>Cart</span></a></li>
-                </ul>
-            </div>
-            <div id="header__bottom" class="header__flex">
-                <ul class="header__menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Soccer</a></li>
-                    <li><a href="#">Volleyball</a></li>
-                    <li><a href="#">Baseball</a></li>
-                    <li><a href="#">Basketball</a></li>
-                </ul>
-
-                <form id="header__div__search">
-                    <input type="search" name="header__search__query" id="header__search__query"
-                        placeholder="Search products..." autocomplete="off" spellcheck="false">
-                    <button type="submit" name="header__search__submit">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </form>
-
-            </div>
-        </header>
+        <!-- Header will be reusable by using Promise later -->
+        <header id="header"></header>
 
         <!-- Main -->
         <main>
