--- a/index.html
+++ b/index.html
@@ -24,6 +24,73 @@
 
         <!-- Main -->
         <main>
+            <div class="container__content-center">
+                <div class="categories__galery">
+                    <ul>
+                        <li class="category">
+                            <div class="category__content-container">
+                                <div class="category__thumbnail-padded-aspect-ratio-container">
+                                    <img class="category__thumbnail-img"
+                                        src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg"
+                                        alt="Category thumbnail">
+                                </div>
+                                <div class="category__info">
+                                    <div class="category__desc">
+                                        <p>Basketball</p>
+                                    </div>
+                                    <div class="category__links"><a>Buy Now</a></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="category">
+                            <div class="category__content-container">
+                                <div class="category__thumbnail-padded-aspect-ratio-container">
+                                    <img class="category__thumbnail-img"
+                                        src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg"
+                                        alt="Category thumbnail">
+                                </div>
+                                <div class="category__info">
+                                    <div class="category__desc">
+                                        <p>Basketball</p>
+                                    </div>
+                                    <div class="category__links"><a>Buy Now</a></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="category">
+                            <div class="category__content-container">
+                                <div class="category__thumbnail-padded-aspect-ratio-container">
+                                    <img class="category__thumbnail-img"
+                                        src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg"
+                                        alt="Category thumbnail">
+                                </div>
+                                <div class="category__info">
+                                    <div class="category__desc">
+                                        <p>Basketball</p>
+                                    </div>
+                                    <div class="category__links"><a>Buy Now</a></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="category">
+                            <div class="category__content-container">
+                                <div class="category__thumbnail-padded-aspect-ratio-container">
+                                    <img class="category__thumbnail-img"
+                                        src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg"
+                                        alt="Category thumbnail">
+                                </div>
+                                <div class="category__info">
+                                    <div class="category__desc">
+                                        <p>Basketball</p>
+                                    </div>
+                                    <div class="category__links"><a>Buy Now</a></div>
+                                </div>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
 
         </main>
 
