ADD top-pick collection, featured collection

--- a/html/main_home.html
+++ b/html/main_home.html
@@ -57,7 +57,111 @@
                     </div>
                 </div>
             </li>
-
+            <li class="category">
+                <div class="category__content-container">
+                    <div class="category__thumbnail-padded-aspect-ratio-container">
+                        <img class="category__thumbnail-img"
+                            src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg" alt="Category thumbnail">
+                    </div>
+                    <div class="category__info">
+                        <div class="category__desc">
+                            <p>Basketball</p>
+                        </div>
+                        <div class="category__links"><a>Buy Now</a></div>
+                    </div>
+                </div>
+            </li>
+            <li class="category">
+                <div class="category__content-container">
+                    <div class="category__thumbnail-padded-aspect-ratio-container">
+                        <img class="category__thumbnail-img"
+                            src="./asset/TestingImages/pexels-tima-miroshnichenko-5586491.jpg" alt="Category thumbnail">
+                    </div>
+                    <div class="category__info">
+                        <div class="category__desc">
+                            <p>Basketball</p>
+                        </div>
+                        <div class="category__links"><a>Buy Now</a></div>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
+
+    <section class="products-top-pick">
+        <h2 class="section-header">top picks</h2>
+        <ul class="list-products">
+            <li class="product">
+                <div class="product__image"><img
+                        src="https://cdn.shopify.com/s/files/1/0066/6563/3903/products/pic_382e8468-e23d-4f96-a313-943668371165_812x.progressive.jpg?v=1613425103"
+                        alt="Product Image"></div>
+                <div class="product__info">
+                    <div class="product__title">
+                        <h3>Shin Guard</h3>
+                    </div>
+                    <div class="product__price">
+                        <p>23.33$</p>
+                    </div>
+                </div>
+            </li>
+            <li class="product">
+                <div class="product__image"><img
+                        src="https://cdn.shopify.com/s/files/1/0066/6563/3903/products/pic_382e8468-e23d-4f96-a313-943668371165_812x.progressive.jpg?v=1613425103"
+                        alt="Product Image"></div>
+                <div class="product__info">
+                    <div class="product__title">
+                        <h3>Shin Guard</h3>
+                    </div>
+                    <div class="product__price">
+                        <p>23.33$</p>
+                    </div>
+                </div>
+            </li>
+            <li class="product">
+                <div class="product__image"><img
+                        src="https://cdn.shopify.com/s/files/1/0066/6563/3903/products/pic_382e8468-e23d-4f96-a313-943668371165_812x.progressive.jpg?v=1613425103"
+                        alt="Product Image"></div>
+                <div class="product__info">
+                    <div class="product__title">
+                        <h3>Shin Guard</h3>
+                    </div>
+                    <div class="product__price">
+                        <p>23.33$</p>
+                    </div>
+                </div>
+            </li>
+            <li class="product">
+                <div class="product__image"><img
+                        src="https://cdn.shopify.com/s/files/1/0066/6563/3903/products/pic_382e8468-e23d-4f96-a313-943668371165_812x.progressive.jpg?v=1613425103"
+                        alt="Product Image"></div>
+                <div class="product__info">
+                    <div class="product__title">
+                        <h3>Shin Guard</h3>
+                    </div>
+                    <div class="product__price">
+                        <p>23.33$</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <section class="featured-collection">
+        <h2 class="section-header">featured collection</h2>
+        <ul class="list-products">
+            <li class="product">
+                <div class="product__image"><img
+                        src="https://cdn.shopify.com/s/files/1/0066/6563/3903/products/pic_382e8468-e23d-4f96-a313-943668371165_812x.progressive.jpg?v=1613425103"
+                        alt="Product Image" width="300px" height="300px"></div>
+                <div class="product__info">
+                    <div class="product__title">
+                        <h3>Shin Guard</h3>
+                    </div>
+                    <div class="product__price">
+                        <p>23.33$</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </section>
 </div>
